Fix: Gestion port dynamique + clarification token ngrok

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -60,11 +60,24 @@
         "HF_TOKEN = os.getenv(\"HF_TOKEN\")\n",
         "\n",
         "# Configuration ngrok\n",
-        "NGROK_TOKEN = \"TON_TOKEN_ICI\"  # ⚠️ À remplacer par ton token ngrok\n",
+        "# ⚠️ IMPORTANT : Récupère ton token sur https://dashboard.ngrok.com/get-started/your-authtoken\n",
+        "# Si le token est invalide, va sur le dashboard et génère un nouveau token\n",
+        "NGROK_TOKEN = \"TON_TOKEN_ICI\"  # ⚠️ À remplacer par ton token ngrok valide\n",
         "ngrok.set_auth_token(NGROK_TOKEN)\n",
         "\n",
-        "# Tuer processus sur port 8000 si existant\n",
-        "!lsof -ti:8000 | xargs kill -9 2>/dev/null; sleep 1\n",
+        "# Gestion des ports : Port aléatoire pour éviter les conflits\n",
+        "PORT = random.randint(8001, 9000)\n",
+        "print(f\"🔌 Port sélectionné : {PORT}\")\n",
+        "\n",
+        "# Tuer processus sur le port sélectionné si existant\n",
+        "import subprocess\n",
+        "try:\n",
+        "    result = subprocess.run(f\"lsof -ti:{PORT}\", shell=True, capture_output=True, text=True)\n",
+        "    if result.stdout.strip():\n",
+        "        subprocess.run(f\"kill -9 {result.stdout.strip()}\", shell=True)\n",
+        "        print(f\"🧹 Port {PORT} libéré\")\n",
+        "except:\n",
+        "    pass\n",
         "\n",
         "print(\"✅ Imports et configuration OK\")\n"
       ]
@@ -447,9 +460,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Lancer FastAPI en background\n",
+        "# Lancer FastAPI en background avec port dynamique\n",
         "def run_server():\n",
-        "    uvicorn.run(app, host=\"0.0.0.0\", port=8000, log_level=\"error\")\n",
+        "    uvicorn.run(app, host=\"0.0.0.0\", port=PORT, log_level=\"error\")\n",
         "\n",
         "thread = threading.Thread(target=run_server, daemon=True)\n",
         "thread.start()\n",
@@ -458,8 +471,8 @@
         "import time\n",
         "time.sleep(3)\n",
         "\n",
-        "# Tunnel ngrok\n",
-        "public_url = ngrok.connect(8000)\n",
+        "# Tunnel ngrok sur le port dynamique\n",
+        "public_url = ngrok.connect(PORT)\n",
         "\n",
         "print(\"\\n\" + \"=\" * 80)\n",
         "print(f\"🚀 API PUBLIQUE : {public_url}\")\n",
@@ -467,7 +480,8 @@
         "print(f\"💬 Init : {public_url}/init\")\n",
         "print(f\"💬 Chat : POST {public_url}/chat\")\n",
         "print(\"=\" * 80)\n",
-        "print(\"\\n✅ Serveur lancé ! Copie l'URL ngrok dans index_spinoza.html\")\n"
+        "print(f\"\\n✅ Serveur lancé sur le port {PORT} !\")\n",
+        "print(\"📋 Copie l'URL ngrok dans index_spinoza.html\")\n"
       ]
     }
   ],
