Add: Gestion tokens via google.colab.userdata (sécurisé)

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -31,7 +31,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 📚 Cellule 2 : Imports + Configuration\n"
+        "## 📚 Cellule 2 : Imports + Configuration\n",
+        "\n",
+        "**🔐 Configuration des secrets (à faire une seule fois) :**\n",
+        "\n",
+        "1. Clique sur l'icône 🔑 **Secrets** dans le panneau de gauche de Colab\n",
+        "2. Ajoute deux secrets :\n",
+        "   - **`ngrok`** : Ton token ngrok (https://dashboard.ngrok.com/get-started/your-authtoken)\n",
+        "   - **`HuggingFaceToken`** : Ton token Hugging Face (https://huggingface.co/settings/tokens)\n",
+        "\n",
+        "Les tokens seront récupérés automatiquement via `userdata.get()`.\n"
       ]
     },
     {
@@ -53,17 +62,33 @@
         "import uvicorn\n",
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
         "from peft import PeftModel\n",
+        "from google.colab import userdata\n",
         "\n",
-        "# Configuration\n",
+        "# Configuration modèle\n",
         "BASE_MODEL = \"mistralai/Mistral-7B-Instruct-v0.2\"\n",
         "ADAPTER_MODEL = \"FJDaz/mistral-7b-philosophes-lora\"\n",
-        "HF_TOKEN = os.getenv(\"HF_TOKEN\")\n",
+        "\n",
+        "# Récupération des tokens depuis Colab Secrets\n",
+        "# ⚠️ Configure tes secrets dans Colab : 🔑 Secrets → Ajouter 'ngrok' et 'HuggingFaceToken'\n",
+        "try:\n",
+        "    NGROK_TOKEN = userdata.get('ngrok')\n",
+        "    print(\"✅ Token ngrok récupéré depuis Colab Secrets\")\n",
+        "except:\n",
+        "    print(\"❌ Token ngrok non trouvé ! Configure le secret 'ngrok' dans Colab Secrets\")\n",
+        "    NGROK_TOKEN = None\n",
+        "\n",
+        "try:\n",
+        "    HF_TOKEN = userdata.get('HuggingFaceToken')\n",
+        "    print(\"✅ Token Hugging Face récupéré depuis Colab Secrets\")\n",
+        "except:\n",
+        "    print(\"❌ Token Hugging Face non trouvé ! Configure le secret 'HuggingFaceToken' dans Colab Secrets\")\n",
+        "    HF_TOKEN = None\n",
         "\n",
         "# Configuration ngrok\n",
-        "# ⚠️ IMPORTANT : Récupère ton token sur https://dashboard.ngrok.com/get-started/your-authtoken\n",
-        "# Si le token est invalide, va sur le dashboard et génère un nouveau token\n",
-        "NGROK_TOKEN = \"TON_TOKEN_ICI\"  # ⚠️ À remplacer par ton token ngrok valide\n",
-        "ngrok.set_auth_token(NGROK_TOKEN)\n",
+        "if NGROK_TOKEN:\n",
+        "    ngrok.set_auth_token(NGROK_TOKEN)\n",
+        "else:\n",
+        "    print(\"⚠️ ngrok ne sera pas configuré sans token\")\n",
         "\n",
         "# Gestion des ports : Port aléatoire pour éviter les conflits\n",
         "PORT = random.randint(8001, 9000)\n",
