Fix: Extraction URL publique depuis NgrokTunnel

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -497,7 +497,9 @@
         "time.sleep(3)\n",
         "\n",
         "# Tunnel ngrok sur le port dynamique\n",
-        "public_url = ngrok.connect(PORT)\n",
+        "tunnel = ngrok.connect(PORT)\n",
+        "# Extraire l'URL publique depuis l'objet NgrokTunnel\n",
+        "public_url = tunnel.public_url if hasattr(tunnel, 'public_url') else str(tunnel).split('\"')[1]\n",
         "\n",
         "print(\"\\n\" + \"=\" * 80)\n",
         "print(f\"🚀 API PUBLIQUE : {public_url}\")\n",
@@ -506,7 +508,7 @@
         "print(f\"💬 Chat : POST {public_url}/chat\")\n",
         "print(\"=\" * 80)\n",
         "print(f\"\\n✅ Serveur lancé sur le port {PORT} !\")\n",
-        "print(\"📋 Copie l'URL ngrok dans index_spinoza.html\")\n"
+        "print(f\"📋 Copie cette URL dans index_spinoza.html : {public_url}\")\n"
       ]
     }
   ],
