Fix: Extraction URL ngrok améliorée (plusieurs méthodes)

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -499,7 +499,16 @@
         "# Tunnel ngrok sur le port dynamique\n",
         "tunnel = ngrok.connect(PORT)\n",
         "# Extraire l'URL publique depuis l'objet NgrokTunnel\n",
-        "public_url = tunnel.public_url if hasattr(tunnel, 'public_url') else str(tunnel).split('\"')[1]\n",
+        "# L'objet NgrokTunnel a une méthode public_url ou on peut extraire depuis str()\n",
+        "if hasattr(tunnel, 'public_url'):\n",
+        "    public_url = tunnel.public_url\n",
+        "elif hasattr(tunnel, 'data') and 'public_url' in tunnel.data:\n",
+        "    public_url = tunnel.data['public_url']\n",
+        "else:\n",
+        "    # Fallback : extraire depuis la représentation string\n",
+        "    import re\n",
+        "    url_match = re.search(r'https://[^\"]+\\.ngrok[^\"]+', str(tunnel))\n",
+        "    public_url = url_match.group(0) if url_match else str(tunnel)\n",
         "\n",
         "print(\"\\n\" + \"=\" * 80)\n",
         "print(f\"🚀 API PUBLIQUE : {public_url}\")\n",
