Add: Endpoint racine / pour informations API

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -438,6 +438,20 @@
         "    allow_headers=[\"*\"],\n",
         ")\n",
         "\n",
+        "@app.get(\"/\")\n",
+        "def root():\n",
+        "    \"\"\"Endpoint racine - Informations sur l'API\"\"\"\n",
+        "    return {\n",
+        "        \"name\": \"Spinoza Secours API\",\n",
+        "        \"model\": \"Mistral 7B + LoRA\",\n",
+        "        \"status\": \"running\",\n",
+        "        \"endpoints\": {\n",
+        "            \"health\": \"GET /health\",\n",
+        "            \"init\": \"GET /init\",\n",
+        "            \"chat\": \"POST /chat\"\n",
+        "        }\n",
+        "    }\n",
+        "\n",
         "@app.get(\"/health\")\n",
         "def health():\n",
         "    return {\"status\": \"ok\", \"model\": \"Mistral 7B + LoRA\"}\n",
