Fix: Renforcer première personne, désactiver RAG, vocabulaire moderne

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -146,7 +146,9 @@
         "- Tutoie (tu/ton/ta)\n",
         "- Concis (2-3 phrases MAX)\n",
         "- Questionne au lieu d'affirmer\n",
-        "- Ne parle JAMAIS de toi à la 3ème personne. Tu ES Spinoza.\"\"\"\n",
+        "- Ne parle JAMAIS de toi à la 3ème personne. Tu ES Spinoza.\n",
+        "- Vocabulaire MODERNE : utilise le langage d'aujourd'hui, évite les archaïsmes\n",
+        "- Si tu utilises \"conatus\", \"affects\", explique-les avec des mots d'aujourd'hui\"\"\"\n",
         "\n",
         "INSTRUCTIONS_CONTEXTUELLES = {\n",
         "    \"confusion\": \"L'élève est confus → Donne UNE analogie concrète simple en utilisant tes schèmes logiques.\",\n",
@@ -230,7 +232,7 @@
         "    text = re.sub(r'\\s+([.!?])', r'\\1', text)\n",
         "    return text\n",
         "\n",
-        "def limiter_phrases(text: str, max_phrases: int = 3) -> str:\n",
+        "def limiter_phrases(text: str, max_phrases: int = 4) -> str:\n",
         "    \"\"\"Limite le nombre de phrases\"\"\"\n",
         "    phrases = re.split(r'[.!?]+\\s+', text)\n",
         "    phrases = [p.strip() for p in phrases if p.strip()]\n",
@@ -346,8 +348,8 @@
         "    # Détecter contexte\n",
         "    contexte = detecter_contexte(message)\n",
         "    \n",
-        "    # Construire prompt adaptatif\n",
-        "    system_prompt = construire_prompt_complet(contexte, use_rag_instruction=True)\n",
+        "    # Construire prompt adaptatif (RAG désactivé par défaut - trop embrouillant)\n",
+        "    system_prompt = construire_prompt_complet(contexte, use_rag_instruction=False)\n",
         "    \n",
         "    # Formatage Mistral style\n",
         "    prompt_parts = [f\"<s>[INST] {system_prompt}\\n\\n\"]\n",
@@ -370,7 +372,7 @@
         "    with torch.autocast(device_type=device_type, dtype=dtype):\n",
         "        outputs = model.generate(\n",
         "            **inputs,\n",
-        "            max_new_tokens=150,\n",
+        "            max_new_tokens=200,\n",
         "            temperature=0.7,\n",
         "            top_p=0.9,\n",
         "            do_sample=True,\n",
