Fix: Remove token printing to avoid secret exposure

--- a/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
+++ b/Spinoza_Secours_HF/RAG_Spinoza_secours.ipynb
@@ -1382,7 +1382,12 @@
    "source": [
     "from google.colab import userdata\n",
     "GIT_HUB_TOKEN = userdata.get('COLAB_GITHUB_TOKEN')\n",
-    "print(GIT_HUB_TOKEN)  # Copie ce token"
+    "if GIT_HUB_TOKEN:\n",
+    "    print(\"✅ Token GitHub récupéré depuis Colab Secrets\")\n",
+    "    # Pour utiliser avec git, configurez l'URL avec le token :\n",
+    "    # git remote set-url origin https://${GIT_HUB_TOKEN}@github.com/FJDaz/Spinoza_secours.git\n",
+    "else:\n",
+    "    print(\"❌ Token GitHub non trouvé ! Configure le secret 'COLAB_GITHUB_TOKEN' dans Colab Secrets\")"
    ]
   }
  ],
